--- a/servicios.html
+++ b/servicios.html
@@ -124,7 +124,9 @@
             <div class="container" id="container1">
                 <div class="item rojo">
                     <h1 id="num1">02.</h1>
-                    <h2 id="num5">DISEÑO Y DESARROLLO WEB</h2>
+                    <h2 id="num2">DISEÑO Y</h2>
+                    <h2 id="num3">DESARROLLO</h2>
+                    <h2 id="num4">WEB</h2>
                     <p id="parrafo1">En <span
                         style="font-family: romantica-free; font-size: 1.2em;">LOVELACE</span> diseñamos y creamos sitios y aplicaciones web funcionales, intuitivas y
                         adaptadas a
@@ -191,9 +193,9 @@
             <div class="container" id="container1">
                 <div class="item rojo">
                     <h1 id="num1">03.</h1>
-                    <h2 id="num5">DISEÑO<br>
-                        ARTE E<br>
-                        ILUSTRACIÓN</h2>
+                    <h2 id="num2">DISEÑO</h2>
+                    <h2 id="num3">ARTE E</h2>
+                    <h2 id="num4">ILUSTRACIÓN</h2>
                     <p id="parrafo1">En <span
                         style="font-family: romantica-free; font-size: 1.2em;">LOVELACE</span> nos enfocamos en crear soluciones
                         digitales atractivas, funcionales y optimizadas
@@ -269,8 +271,8 @@
             <div class="container" id="container1">
                 <div class="item rojo">
                     <h1 id="num1">04.</h1>
-                    <h2 id="num2">EDICIÓN<br>
-                        DIGITAL<br></h2>
+                    <h2 id="num2">EDICIÓN</h2>
+                    <h2 id="num3">DIGITAL</h2>
                     <p id="parrafo1">En <span
                         style="font-family: romantica-free; font-size: 1.2em;">LOVELACE</span> nos enfocamos en crear soluciones
                         digitales atractivas, funcionales y optimizadas
@@ -354,7 +356,8 @@
             <div class="container" id="container1">
                 <div class="item rojo">
                     <h1 id="num1">05.</h1>
-                    <h2 id="num2">DISEÑO <br> 3D <br></h2>
+                    <h2 id="num2">DISEÑO</h2>
+                    <h2 id="num3">3D</h2>
                     <p id="parrafo1">En <span
                         style="font-family: romantica-free; font-size: 1.2em;">LOVELACE</span> damos vida a tus ideas mediante diseños 3D realistas y de
                         alta calidad visual, integrando tecnologías avanzadas como Unreal Engine para ofrecer
@@ -400,8 +403,9 @@
             <div class="container" id="container1">
                 <div class="item rojo">
                     <h1 id="num1">06.</h1>
-                    <h2 id="num2">DISEÑO DE<br>
-                        MARKETING<br></h2>
+                    <h2 id="num2">DISEÑO</h2>
+                    <h2 id="num3">DE</h2>
+                    <h2 id="num4">MARKETING</h2>
                     <p id="parrafo1">En <span
                         style="font-family: romantica-free; font-size: 1.2em;">LOVELACE</span> desarrollamos diseños efectivos para fortalecer la identidad de marca y
                         optimizar la comunicación. Nos diferenciamos por un enfoque creativo y estratégico, alineado con
