--- a/servicios.html
+++ b/servicios.html
@@ -35,7 +35,7 @@
             </div>
         </div>
         <div class="page" id="page2">
-            <button class="return-button">Volver</button>
+            <button class="return-button"><img src="./img/FLECHA VOLVER.webp" alt="flechavolver"></button>
             <div class="container" id="container1">
                 <div class="item rojo">
                     <h1 id="num1">01.</h1>
@@ -120,7 +120,7 @@
             </div>
         </div>
         <div class="page" id="page3">
-            <button class="return-button">Volver</button>
+            <button class="return-button"><img src="./img/FLECHA VOLVER.webp" alt="flechavolver"></button>
             <div class="container" id="container1">
                 <div class="item rojo">
                     <h1 id="num1">02.</h1>
@@ -189,7 +189,7 @@
             </div>
         </div>
         <div class="page" id="page4">
-            <button class="return-button">Volver</button>
+            <button class="return-button"><img src="./img/FLECHA VOLVER.webp" alt="flechavolver"></button>
             <div class="container" id="container1">
                 <div class="item rojo">
                     <h1 id="num1">03.</h1>
@@ -267,7 +267,7 @@
             </div>
         </div>
         <div class="page" id="page5">
-            <button class="return-button">Volver</button>
+            <button class="return-button"><img src="./img/FLECHA VOLVER.webp" alt="flechavolver"></button>
             <div class="container" id="container1">
                 <div class="item rojo">
                     <h1 id="num1">04.</h1>
@@ -352,7 +352,7 @@
             </div>
         </div>
         <div class="page" id="page6">
-            <button class="return-button">Volver</button>
+            <button class="return-button"><img src="./img/FLECHA VOLVER.webp" alt="flechavolver"></button>
             <div class="container" id="container1">
                 <div class="item rojo">
                     <h1 id="num1">05.</h1>
@@ -399,7 +399,7 @@
             </div>
         </div>
         <div class="page" id="page7">
-            <button class="return-button">Volver</button>
+            <button class="return-button"><img src="./img/FLECHA VOLVER.webp" alt="flechavolver"></button>
             <div class="container" id="container1">
                 <div class="item rojo">
                     <h1 id="num1">06.</h1>
