--- a/servicios.html
+++ b/servicios.html
@@ -15,8 +15,7 @@
             <a href="./index.html"><img src="./img/LOGO GRANDE.webp" alt="" loading="lazy" id="logo"></a>
             <h1>SERVICIOS</h1>
             <div class="cards">
-                <div class="card" data-page="2"><img src="./img/servicios/01 540X540-.webp" alt="" loading="lazy"
-                        style=" "></div>
+                <div class="card" data-page="2"><img src="./img/servicios/01 540X540-.webp" alt="" loading="lazy"></div>
                 <div class="card" data-page="3"><img src="./img/servicios/02 540X540-.webp" alt="" loading="lazy"></div>
                 <div class="card" data-page="4"><img src="./img/servicios/03 540X540-.webp" alt="" loading="lazy"></div>
                 <div class="card" data-page="5"><img src="./img/servicios/04 540X540-.webp" alt="" loading="lazy"></div>
