--- a/servicios.html
+++ b/servicios.html
@@ -360,8 +360,7 @@
                     <p id="parrafo1">En <span
                         style="font-family: romantica-free; font-size: 1.2em;">LOVELACE</span> damos vida a tus ideas mediante diseños 3D realistas y de
                         alta calidad visual, integrando tecnologías avanzadas como Unreal Engine para ofrecer
-                        experiencias impactantes e inmersivas. Nuestro equipo desarrolla soluciones personalizadas, destacando por
-                        su nivel de detalle, creatividad y funcionalidad</p>
+                        experiencias impactantes e inmersivas. </p>
                 </div>
                 <div class="item_verde">
                     <div class="accordion_grupo">
