--- a/servicios.html
+++ b/servicios.html
@@ -167,7 +167,7 @@
                                     maximizar los resultados de tus campañas digitales.</h6>
                             </div>
                         </div>
-                        <div class="accordion_grupo-item">
+                        <!-- <div class="accordion_grupo-item">
                             <button id="accordion_grupo-button-4" aria-expanded="false"><span
                                     class="accordion_grupo-title">DISEÑO DE ÍCONOS</span><span class="icon"
                                     aria-hidden="true"></span></button>
@@ -178,7 +178,7 @@
                                     refuercen tu imagen, simplifiquen procesos y mejoren la experiencia del usuario.
                                 </h6>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
                 <button class="iridiscent">VER PORTFOLIO</button>
